# rest-api-practice

./: README.md  alembic.ini  main.py  pyproject.toml  test_main.py
alembic/: env.py
alembic/versions/: 3abadf93f70f_create_table_pegawai.py
config/: database.py
models/: pegawai.py
routes/: pegawai.py
schemas/: pegawai.py
