[tool.poetry]
name = "rest-api-practice"
version = "0.1.0"
description = "Rest API practice with FastAPI"
authors = ["Archiruz <evazerblyre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.2"
alembic = "^1.13.2"
pydantic = "^2.8.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
pymysql = "^1.1.1"
faker = "^28.0.0"
httpx = "^0.27.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
